# rs-recruiting-course-app

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  alembic.ini  docker-compose.deploy.yml  docker-compose.staging.yml  docker-compose.yml  gen-context.config.json  pyproject.toml
.claude/: settings.json
.claude/agents/: auth-reviewer.md  ci-runner.md
.claude/hooks/: format_on_edit.sh  gate_commit.sh  gate_push.sh  inject_rules.sh  pre_bash_guard.sh  prune_worktrees.sh
.claude/rules/: auth.md  frontend.md  infra.md  migrations.md  tests.md  worker.md
.design-sync/: config.json
.design-sync/previews/: ActivityTimeline.tsx  AutoGrowTextarea.tsx  Button.tsx  CompanyName.tsx  ConfirmDialog.tsx  Dialog.tsx  DropdownMenu.tsx  Eyebrow.tsx  FeaturedRibbon.tsx  Field.tsx  FilterPill.tsx  FunnelIcon.tsx  InfiniteScrollFooter.tsx  JobRequirementsInput.tsx  JobTagsInput.tsx  KebabButton.tsx  LegalProse.tsx  ListStateSwitch.tsx  MatchList.tsx  NoResults.tsx  PageHeader.tsx  RailToggleIcon.tsx  RangeSlider.tsx  ResumeViewer.tsx  ScoreBadge.tsx  SearchInput.tsx  SearchableMultiSelect.tsx  SearchableSelect.tsx  SignatureCanvas.tsx  SortControl.tsx  SortableColumnHeader.tsx  SplitPaneLayout.tsx  StatusBadge.tsx  StatusSegmentedControl.tsx  Toaster.tsx
.github/workflows/: _deploy.yml  _notify-failure.yml  cd.yml  ci.yml  cut-release.yml  deliver.yml  deploy-dev.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  hotfix.yml  redeploy-frontend.yml  release.yml  rollback.yml  sandbox-promote.yml  sandbox.yml  security-audit.yml  staging-deploy.yml  stale.yml
alembic/: env.py
alembic/versions/: 04c996bcec75_add_sessions_invalidated_at_to_user.py  0d8005013ed8_add_resume_summary_to_candidateprofile.py  5237dfa3ad52_drop_job_match_table.py  9e5b71542701_add_user_agent_to_refreshtoken.py  a26cddb666fd_add_worker_heartbeat_table.py  b9b3da440b29_add_match_suggestion.py  c9e3edf3bd29_resize_embedding_vectors_to_1536.py  db10eb69ce40_resume_matching_pgvector_job_matches.py  db670081d5ed_add_pushed_by_admin_to_application.py
alloy/: cloudwatch.alloy  config.alloy
docker/: alloy.Dockerfile  base.Dockerfile
docs/: API_DESIGN.md  ARCHITECTURE.md  INFRASTRUCTURE.md  RETENTION_PURGE.md  generate_diagram.py  release-process.md  service-data-ownership.md
frontend/: Dockerfile.sandbox  eslint.config.js  nginx.sandbox.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
libs/shared/: pyproject.toml
libs/shared/rs_shared/: enums.py  models.py
libs/shared/rs_shared/core/: __init__.py  matching.py  task_contract.py  tasks.py
libs/shared/rs_shared/core/infrastructure/: config.py  database.py  database_helpers.py  invite_tokens.py  pagination.py  request_context.py  security.py  storage_helpers.py  telemetry.py
libs/shared/rs_shared/core/services/: cv_extraction.py  email.py  email_quota.py  embeddings.py  file_validation.py  generation.py  storage.py  storage_local.py  storage_s3.py  worker_heartbeat.py
libs/shared/rs_shared/schemas/: __init__.py  audit.py  auth.py  candidates.py  companies.py  invites.py  jobs.py
libs/shared/rs_shared/services/admin/: _application_status.py  _candidates_purge.py  _helpers.py  _job_close.py  _job_emails.py  applications.py  candidates.py  companies.py  company_approval.py  company_profiles.py  invites.py  jobs.py  jobs_workflow.py  matches.py  overview.py
libs/shared/rs_shared/services/auth/: activation.py  candidate_registration.py  login.py  password_change.py  password_reset.py  registration.py  session.py
libs/shared/rs_shared/services/candidate/: applications.py  data_export.py  profile.py
libs/shared/rs_shared/services/company/: _jobs_applications.py  _jobs_recommendations.py  candidates.py  jobs.py  profile.py
libs/shared/rs_shared/services/public/: _application_helpers.py  applications.py  jobs.py
libs/shared/rs_shared/services/utils/: audit.py  contract_pdf.py
libs/shared/rs_shared/templates/: email.py
nginx/: nginx.staging.conf
scripts/: backfill_embeddings.py  compute_next_patch_tag.sh  compute_next_rc_tag.sh  compute_next_release_tag.sh  deploy_ec2.sh  deploy_ec2_staging.sh  generate_seed_resumes.py  seed_admin.py  seed_mock_data.py  test_claude_hooks.sh  validate_blocking_io.py  validate_deploy_artifacts.sh  validate_imports.py  validate_test_files.py  validate_type_hints.py
services/api/: Dockerfile  pyproject.toml
services/api/rs_api/: main.py
services/api/rs_api/api/: _resume_streaming.py  analytics.py  sentry_tunnel.py  uploads.py
services/api/rs_api/api/admin/: applications.py  audit.py  candidates.py  companies.py  invites.py  jobs.py  matches.py  overview.py
services/api/rs_api/api/auth/: activation.py  candidate_registration.py  invites.py  login.py  password_change.py  password_reset.py  registration.py  sessions.py
services/api/rs_api/api/candidate/: applications.py  data_export.py  profile.py
services/api/rs_api/api/company/: jobs.py  profile.py  resumes.py
services/api/rs_api/api/public/: _apply_handler.py  applications.py  jobs.py
services/api/rs_api/api/seo/: __init__.py  _articles.py  _jsonld.py  _pages.py  _render.py  _routes.py  _sitemap.py
services/api/rs_api/infrastructure/: dependencies.py  error_handling.py  limiter.py  middleware.py
services/worker/: Dockerfile  pyproject.toml
services/worker/rs_worker/: worker.py
src/: main.py  models.py  worker.py
tests/: conftest.py  test_domain_is_framework_free.py  test_main.py  test_schemas.py
(+453 files in other folders)
