[project]
name = "rs-recruiting"
version = "0.1.0"
description = "RS Recruitment backend — uv workspace root (api + worker + shared)"
requires-python = ">=3.12"
# The root is a virtual workspace project (not built/installed). It depends on
# the deployable services so `uv sync` provisions the whole stack for dev/test;
# per-service images use `uv sync --package <member>` to install a lean subset.
dependencies = [
    "rs-recruiting-api",
    "rs-recruiting-worker",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/shared", "services/api", "services/worker"]

[tool.uv.sources]
rs-recruiting-shared = { workspace = true }
rs-recruiting-api = { workspace = true }
rs-recruiting-worker = { workspace = true }

[dependency-groups]
test = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=5.0.0,<8",
    "pytest-xdist>=3.0.0,<4",
    "moto[s3,ses]>=5.2.2,<6",
]
dev = [
    "ruff>=0.15.18",
    "pre-commit>=4.0.0",
    "aiosmtpd>=1.4.6,<2",
    "import-linter>=2.0",
    {include-group = "test"},
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
# E = pycodestyle errors
# F = Pyflakes
# I = isort
select = ["E", "F", "I"]

ignore = []

[tool.ruff.lint.isort]
known-first-party = ["rs_shared", "rs_api", "rs_worker"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["E501"]
"scripts/generate_seed_resumes.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# importlib mode avoids module-name collisions when test files share a
# basename across subdirectories (e.g. tests/api/auth/test_invites.py and
# tests/api/admin/test_invites.py). Also avoids asyncio event-loop issues
# that occur with __init__.py-based package imports in xdist workers.
addopts = "--durations=20"
filterwarnings = []

# import-linter — structural guard behind the lean images. Run with
# `uv run lint-imports`. Keeps the web stack out of the shared domain and the
# worker so their images never re-acquire FastAPI/uvicorn/slowapi/starlette,
# and stops the shared layer from depending on the services.
[tool.importlinter]
root_packages = ["rs_shared", "rs_api", "rs_worker"]
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Shared domain is framework-free"
type = "forbidden"
source_modules = ["rs_shared"]
forbidden_modules = ["fastapi", "starlette", "uvicorn", "slowapi", "sentry_sdk", "markdown"]

[[tool.importlinter.contracts]]
name = "Worker carries no web stack"
type = "forbidden"
source_modules = ["rs_worker"]
forbidden_modules = ["fastapi", "starlette", "uvicorn", "slowapi", "sentry_sdk", "markdown"]

[[tool.importlinter.contracts]]
name = "Shared domain does not depend on the services"
type = "forbidden"
source_modules = ["rs_shared"]
forbidden_modules = ["rs_api", "rs_worker"]
