[project]
name = "rs-recruiting-shared"
version = "0.1.0"
description = "Shared domain for RS Recruitment: models, schemas, core infra, service logic"
requires-python = ">=3.12"
# Lean, framework-free closure. Deliberately NO fastapi / uvicorn / slowapi /
# python-multipart / sentry / markdown — those are web-only and live in the API
# service so the worker image (which depends only on this package) stays lean.
dependencies = [
    "sqlmodel>=0.0.39",
    "sqlalchemy>=2.0.51,<2.1",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "bcrypt>=5.0.0,<6",
    "pyjwt>=2.13.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.0",
    "premailer>=3.10.0",
    "pgvector>=0.5.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "pymupdf>=1.24.0,<2",
    "aioboto3>=15.5.0,<16",
    "boto3>=1.35.0,<2",
    "aiosmtplib>=5.1.2,<6",
    "python-json-logger>=4.1.0",
    "opentelemetry-sdk>=1.42.0,<2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.0,<2",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b0,<1",
    "opentelemetry-instrumentation-logging>=0.63b0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rs_shared"]
