[project]
name = "rs-recruiting-api"
version = "0.1.0"
description = "RS Recruitment HTTP API (FastAPI) — routers, web infrastructure, entrypoint"
requires-python = ">=3.12"
dependencies = [
    "rs-recruiting-shared",
    "fastapi>=0.138.0",
    "uvicorn>=0.49.0",
    "slowapi>=0.1.10",
    "python-multipart>=0.0.32,<1",
    "sentry-sdk[fastapi]>=2.63.0,<3",
    "markdown>=3.10.2",
    "alembic>=1.14.0",
    "opentelemetry-instrumentation-fastapi>=0.63b0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rs_api"]

[tool.uv.sources]
rs-recruiting-shared = { workspace = true }
